# chess

./: .coverage  .pre-commit-config.yaml  README.md  ROADMAP.md  chess_logic.py  coverage.xml  elo.py  game_state.py  lichess.py  main.py  mise.toml  opening_book.py  pieces_svg.py  puzzle_progress.py  puzzles.py  pyproject.toml
.cursor/: environment.json
.github/workflows/: pre-commit.yml
bots/: __init__.py  base.py  botbot.py  minimax.py  mobility.py  simple.py  stockfish.py
flet_chess.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: ratchet_coverage.py
tests/: __init__.py  test_adaptive_stockfish.py  test_antichess.py  test_bots_antichess.py  test_bots_botbot.py  test_bots_botbot_complete_coverage.py  test_bots_botbot_coverage.py  test_bots_botbot_detailed.py  test_bots_botbot_direct.py  test_bots_botbot_final.py  test_bots_botbot_forced_paths.py  test_bots_botbot_mocked.py  test_bots_minimax.py  test_bots_minimax_coverage.py  test_bots_minimax_detailed.py  test_bots_mobility.py  test_bots_simple.py  test_bots_simple_complete.py  test_bots_stockfish.py  test_chess960.py  test_chess_logic.py  test_chess_logic_detailed.py  test_elo.py  test_final_coverage.py  test_game_state.py  test_lichess.py  test_opening_book.py  test_pieces_svg.py  test_puzzle_progress.py  test_puzzles.py  test_stockfish_chess960.py  test_time_management.py
